created all application layer classes and improved and simplified logic

--- a/Application/LibrarySystemAPI.Application/LibrarySystemAPI.Application.csproj
+++ b/Application/LibrarySystemAPI.Application/LibrarySystemAPI.Application.csproj
@@ -7,8 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
-    <Folder Include="Services\" />
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Data\LibrarySystemAPI.Data\LibrarySystemAPI.Data.csproj" />
+    <ProjectReference Include="..\..\Domain\LibrarySystemAPI.Domain\LibrarySystemAPI.Domain.csproj" />
   </ItemGroup>
 
 </Project>
