--- a/Data/LibrarySystemAPI.Data/LibrarySystemAPI.Data.csproj
+++ b/Data/LibrarySystemAPI.Data/LibrarySystemAPI.Data.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Domain\LibrarySystemAPI.Domain\LibrarySystemAPI.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
