added necessary commands to program.cs to use di

--- a/API/LibrarySystemAPI.API/LibrarySystemAPI.API.csproj
+++ b/API/LibrarySystemAPI.API/LibrarySystemAPI.API.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Application\LibrarySystemAPI.Application\LibrarySystemAPI.Application.csproj" />
+    <ProjectReference Include="..\..\Data\LibrarySystemAPI.Data\LibrarySystemAPI.Data.csproj" />
   </ItemGroup>
 
 </Project>
